Adjusted contrast of home page sections; Fixed quirks in home page style

--- a/css/index.sass
+++ b/css/index.sass
@@ -45,7 +45,7 @@
   color: #ffffff
   width: 100%
   min-height: 150px
-  background-color: #333333
+  background-color: #606060
   border-top: 1px solid #000000
   border-bottom: 1px solid #000000
 
@@ -54,12 +54,16 @@
     height: 100%
     vertical-align: middle
 
+    a
+      text-decoration: none
+
 #source-stats
   color: #ffffff
   width: 100%
   min-height: 300px
-  background-color: #333333
+  background-color: #505050
   border-top: 1px solid #000000
+  border-bottom: 1px solid #000000
 
   .container
     width: 80%
